--- a/templates/chat/status-message.hbs
+++ b/templates/chat/status-message.hbs
@@ -1,5 +1,6 @@
 <div class="chat-card chat-card__header chat-card__header--status" style="{{style}}">
-  <img src="{{item.img}}" class="chat-card__image--primary" /> {{item.name}}
+  <img src="{{item.img}}" class="chat-card__image--primary" /> 
+  <div>{{item.name}}</div>
 </div>
 {{#if item.system.description}}
   <div class="chat-card__description">
