--- a/src/scss/components/_chat-cards.scss
+++ b/src/scss/components/_chat-cards.scss
@@ -71,10 +71,11 @@
         }
 
         &--status {
-            display: flex;
-            justify-content: left;
-            align-items: left;
-            padding-left: 48px;
+            // display: flex;
+            // justify-content: left;
+            // align-items: left;
+            // padding-left: 48px;
+            font-size: 1.125rem;
         }
 
         &--damage {
@@ -203,14 +204,9 @@
 
     &__image {
         &--primary {
-            width: 40px;
-            height: 40px;
+            width: 150px;
+            height: 150px;
             border: 0px;
-            object-fit: contain;
-            position: absolute;
-            left: 8px;
-            top: 50%;
-            transform: translateY(-50%);
         }
 
         &--secondary {
