--- a/templates/chat/delete-status-message.hbs
+++ b/templates/chat/delete-status-message.hbs
@@ -1,6 +1,7 @@
 <div class="chat-card">
   <div class="chat-card__header chat-card__header--delete">
-    <img src="{{item.img}}" class="chat-card__image--primary" /> {{item.name}} : Removed
+    <img src="{{item.img}}" class="chat-card__image--primary" /> 
+    <div>{{item.name}} : Removed</div>
   </div>
   <div class="chat-card__description">
     <div class="chat-card__description--header">{{item.actor.name}}. . . </div> 
