Updated submit button text to make more sense with new methodology

--- a/templates/macros/change-target-status.hbs
+++ b/templates/macros/change-target-status.hbs
@@ -42,7 +42,7 @@
     <input class="base-form__number-input" type="number" id="disadvantageChange" name="disadvantageChange" value="{{ifThen storedData.changeTargetStatus_disadvantageChange storedData.changeTargetStatus_disadvantageChange "0"}}" placeholder="Change Value">
   </div>
   <div class="base-form__group base-form__group--right">
-    <button type="submit" class="base-form__button base-form__button--primary">{{ifThen subtractMode "Decrement" "Increment"}}</button>
+    <button type="submit" class="base-form__button base-form__button--primary">Change</button>
     <button type="button" class="base-form__button" data-action="store">Store</button>
     <button type="button" class="base-form__button" data-action="close">Close</button>
   </div>
