change to subheader rendering due to change to card image sizes

--- a/css/eventide-rp-system.css
+++ b/css/eventide-rp-system.css
@@ -875,11 +875,8 @@
 }
 .chat-card__header--subheader {
   color: var(--eventide-rp-system-chat-card-white);
-  text-align: left;
-  display: flex;
-  align-items: left;
-  justify-content: left;
-  padding-left: 48px;
+  align-items: center;
+  justify-content: center;
   font-size: 0.7rem;
 }
 .chat-card__header--acrobatics {
@@ -1864,5 +1861,3 @@
 .eventide-rp-system .effects .item .effect-controls {
   border: none;
 }
-
-/*# sourceMappingURL=eventide-rp-system.css.map */
