--- a/src/scss/components/_chat-cards.scss
+++ b/src/scss/components/_chat-cards.scss
@@ -14,11 +14,8 @@
 
         &--subheader {
             color: colors.$card-white;
-            text-align: left;
-            display: flex;
-            align-items: left;
-            justify-content: left;
-            padding-left: 48px;
+            align-items: center;
+            justify-content: center;
             font-size: 0.7rem;
         }
 
