--- a/templates/actor/statuses.hbs
+++ b/templates/actor/statuses.hbs
@@ -27,12 +27,14 @@
       >
         <div class='item-name'>
           <div class='item-image'>
+            <a class='rollable' data-roll-type='item' data-action='roll'>
               <img
                 src='{{item.img}}'
                 title='{{item.name}}'
                 width='24'
                 height='24'
               />
+            </a>
           </div>
           <div>{{item.name}}</div>
         </div>
