Completed implementation: now will be styling the popup a bit.

--- a/templates/macros/status-popup.hbs
+++ b/templates/macros/status-popup.hbs
@@ -12,7 +12,7 @@
     {{/if}}
     <hr class="chat-card__hr" />
     {{#ifCond effects.length ">" 0}}
-    <div class="chat-card__effects"><div class='chat-card__effects--title'>Effects</div>
+    <div class="chat-card__effects base-form__content"><div class='chat-card__effects--title'>Effects</div>
     {{#each effects}}
         <div class="chat-card__effects--name"><img src="{{this.img}}" class="chat-card__image--secondary" /> {{this.name}}</div>
         {{#ifCond this.changes.length ">" 0 }}
