--- a/src/scss/global/_form-elements.scss
+++ b/src/scss/global/_form-elements.scss
@@ -106,6 +106,63 @@
     border-radius: 5px;
   }
 
+  &__effects {
+    @extend .underdog-regular;
+    text-align: justify;
+    font-size: 0.7rem;
+    padding: 0rem;
+    color: colors.$card-white;
+    background-color: colors.$form-content-bg;
+
+
+    &--title {
+        @extend .protest-revolution-regular;
+        text-align: justify;
+        font-size: 0.8rem;
+        padding: 0.01rem;
+        padding-top: 0.2rem;
+        padding-bottom: 0.2rem;
+        margin-bottom: 3px;
+        background-color: colors.$effect;
+        color: colors.$card-white;
+    }
+
+    &--name {
+        font-weight: bolder;
+        color: colors.$card-white;
+        font-size: 0.75rem;
+    }
+
+    &--row {
+        padding-left: 20px;
+        display: grid;
+        grid-column: span 3 / span 3;
+        grid-template-columns: repeat(3, minmax(0, 1fr));
+        width: 50%;
+
+        &-cell {
+            padding-left: 3px;
+            padding-right: 3px;
+            border-bottom: 1px dashed colors.$card-tan;
+
+            &--first,
+            &--last {
+                font-weight: bold;
+            }
+
+            &--last {
+                border-left: 1px dashed colors.$card-tan;
+                padding-left: 15px;
+                white-space: nowrap;
+            }
+
+            &--middle {
+                font-style: italic;
+            }
+        }
+    }
+}
+
   &__group {
     margin: 0;
     padding: 0.25rem 0.5rem 0.75rem 0.5rem;
