--- a/templates/macros/status-popup.hbs
+++ b/templates/macros/status-popup.hbs
@@ -12,14 +12,14 @@
     {{/if}}
     <hr class="chat-card__hr" />
     {{#ifCond effects.length ">" 0}}
-    <div class="chat-card__effects base-form__content"><div class='chat-card__effects--title'>Effects</div>
+    <div class="base-form__effects"><div class='base-form__effects--title'>Effects</div>
     {{#each effects}}
-        <div class="chat-card__effects--name"><img src="{{this.img}}" class="chat-card__image--secondary" /> {{this.name}}</div>
+        <div class="base-form__effects--name"><img src="{{this.img}}" class="chat-card__image--secondary" /> {{this.name}}</div>
         {{#ifCond this.changes.length ">" 0 }}
         {{#each this.changes}}
-            <div class="chat-card__effects--row">
-            <div class="chat-card__effects--row-cell chat-card__effects--row-cell--first">{{keySplit this.key 2}}</div> 
-            <div class="chat-card__effects--row-cell chat-card__effects--row-cell--middle">
+            <div class="base-form__effects--row">
+            <div class="base-form__effects--row-cell base-form__effects--row-cell--first">{{keySplit this.key 2}}</div> 
+            <div class="base-form__effects--row-cell base-form__effects--row-cell--middle">
                 {{#ifCond this.mode "===" 5}}set to{{/ifCond}}
                 {{#ifCond this.mode "!==" 5}}
                 {{#ifCond (keySplit this.key 4) "===" "advantage"}}
@@ -33,7 +33,7 @@
                 {{/ifCond}}
                 {{/ifCond}}
             </div>
-            <div class="chat-card__effects--row-cell chat-card__effects--row-cell--last">{{this.value}}</div>
+            <div class="base-form__effects--row-cell base-form__effects--row-cell--last">{{this.value}}</div>
             </div>
         {{/each}}
         {{/ifCond}}
