Updated explanation paragraph at the top of the script to make it more clear what the heal checkbox does.

--- a/templates/macros/damage-targets.hbs
+++ b/templates/macros/damage-targets.hbs
@@ -1,5 +1,5 @@
 <div class="{{cssClass}} base-form" autocomplete="off">
-    <p>This script is for creating a custom damage message and applying the damage to your targeted token.</p>
+    <div class="">This script is designed to damage targets and heal selected tokens. If its in heal mode it will always heal selected over damaging targets.</div>
     <div class="base-form__group">
       <label class="base-form__label" for="label">Label:</label>
       <input class="base-form__text-input" autofocus placeholder="Label" name="label" value="{{lookup storedData (lookup storageKeys 0)}}">
