Gave this form an autofocus so it doesn't require mouse interaction to quick roll.

--- a/templates/macros/select-ability-roll.hbs
+++ b/templates/macros/select-ability-roll.hbs
@@ -1,7 +1,7 @@
 <div class="{{cssClass}} base-form" autocomplete="off">
     <div class="base-form__header">Select an Ability Roll</div>
     <div class="base-form__group">
-        <select class="base-form__select" name="attribute-choice">
+        <select class="base-form__select" autofocus name="attribute-choice">
             {{#each abilities}}
             <option value="{{this}}">{{this}}</option>
             {{/each}}
