--- a/src/scss/components/_chat-cards.scss
+++ b/src/scss/components/_chat-cards.scss
@@ -39,8 +39,8 @@
             background-color: colors.$wits;
         }
 
-        &--item {
-            background-color: colors.$item;
+        &--gear {
+            background-color: colors.$gear;
         }
 
         &--dice-dc {
