Implemented new item schema item that can turn off name addition to roll cards where applicable.

--- a/templates/chat/combat-power-message.hbs
+++ b/templates/chat/combat-power-message.hbs
@@ -43,8 +43,10 @@
 {{/if}}
 {{#if system.description}}
 <div class="chat-card__description">
+  {{#if system.rollActorName}}
     <div class="chat-card__description--header">{{actor.name}}. . . </div> 
-    {{{system.description}}}
+  {{/if}}
+  {{{system.description}}}
 </div>
 {{/if}}
 
