Moved popups into a subfolder to help keep base folders from getting too cluttered.

--- a/templates/macros/popups/status-popup.hbs
+++ b/templates/macros/popups/status-popup.hbs
@@ -42,5 +42,6 @@
 
     <div class="base-form__group base-form__group--right">
         <button type="submit" class="base-form__button base-form__button--primary">Close</button>
+        <button type="button" class="base-form__button" data-action="toChat">Send To Chat</button>
     </div>
 </div>
