--- a/templates/actor/gear.hbs
+++ b/templates/actor/gear.hbs
@@ -3,7 +3,7 @@
   <ol class='items-list'>
     <li class='item flexrow items-header'>
       <div class='item-name'>{{localize 'Name'}}</div>
-      <div class='item-formula'>{{localize 'EVENTIDE_RP_SYSTEM.Item.Gear.FIELDS.rollFormula.label'}}</div>
+      <div class='item-quantity'>{{localize 'EVENTIDE_RP_SYSTEM.Item.Gear.FIELDS.quantity.label'}}</div>
       <div class='item-controls'>
         {{#if @root.editable}}
           <a
@@ -39,7 +39,7 @@
           </div>
           <div>{{item.name}}</div>
         </div>
-        <div class='item-formula item-prop'>{{item.system.formula}}</div>
+        <div class='item-quantity item-prop'>{{item.system.quantity}}</div>
         <div class='item-controls'>
           <a
             class='item-control item-edit'
